                       User-Visible WebAuth Changes

WebAuth 4.0.2 (unreleased)

    Fix a typo that caused the cookie tracking whether a user had
    requested REMOTE_USER authentication to be reset as a session cookie.

    Ignore cookies with undefined values in WebLogin to avoid Perl
    warnings in the Apache error log.

    Document factor codes in the mod_webauth manual.

    Add additional Stanford-specific documentation for how to enable
    multifactor authentication on a WebAuth Application Server at
    Stanford.

WebAuth 4.0.1 (2011-09-23)

    The protocol for getting suspicious login information from the user
    information service and conveying that information to WebLogin has
    changed to use the IP address as the content of the tag and move the
    hostname to an attribute, since the hostname is optional and may not
    be available.

    If the user information service returns suspicious logins, WebLogin
    now forces a confirmation page and displays those logins.  Full use of
    this functionality will require an update to the local confirm
    template to add the suspicious login display if the corresponding
    template variable is set.

    Log the return URL of authentication requests to the WebKDC.

    Fix a memory leak in token decoding.

    Properly initialize the creation time of the error token returned to
    the WAS when a login is canceled.

    Reduce the log level of the mod_webauth logging when retrieving
    credentials from the WebKDC.  The full XML exchange is now only logged
    when debug logging is enabled.

    Update to rra-c-util 3.9:

    * Use an atexit handler to clean up after Kerberos tests.

WebAuth 4.0.0 (2011-09-02)

    WARNING: This release is a major revision with significant changes to
    mod_webkdc and to the WebLogin code.  While the additions are not
    completely specific to Stanford University, it still has some
    limitations and missing components that will make it difficult to